--- a/styles/all/template/event/overall_header_breadcrumbs_after.html
+++ b/styles/all/template/event/overall_header_breadcrumbs_after.html
@@ -1,4 +1,4 @@
-<li class="rightside">
+<!-- IF GCSE_CX --><li class="rightside">
 <form action="{GCSE_URL}" id="cse-search-box">
     <input type="hidden" name="cx" value="{GCSE_CX}" />
     <input type="hidden" name="cof" value="{GCSE_COF}" />
@@ -7,4 +7,4 @@
     <input type="submit" name="sa" value="{L_SEARCH}" />
 </form>
 <script type="text/javascript" src="http://www.google.nl/coop/cse/brand?form=cse-search-box&amp;lang=nl"></script>
-</li>
+</li><!-- ENDIF -->
