--- a/styles/all/template/event/overall_header_breadcrumbs_after.html
+++ b/styles/all/template/event/overall_header_breadcrumbs_after.html
@@ -1,10 +1,10 @@
-<!-- IF GCSE_CX --><li class="rightside">
+<!-- IF GCSE_CX --><!-- INCLUDECSS css/gcse.css --><li class="rightside">
 <form action="{GCSE_URL}" id="cse-search-box">
     <input type="hidden" name="cx" value="{GCSE_CX}" />
     <input type="hidden" name="cof" value="{GCSE_COF}" />
     <input type="hidden" name="ie" value="UTF-8" />
-    <input type="text" name="q" size="{GCSE_Q}" />
+    <input type="text" name="q" id="cse-search-box-q" size="{GCSE_Q}" />
     <input type="submit" name="sa" value="{L_SEARCH}" />
 </form>
-<script type="text/javascript" src="http://www.google.nl/coop/cse/brand?form=cse-search-box&amp;lang=nl"></script>
+<script type="text/javascript" src="https://www.google.nl/coop/cse/brand?form=cse-search-box&amp;lang=nl"></script>
 </li><!-- ENDIF -->
